<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="wb">Wardrobe Buddy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="pass">Pass</string>
    <string name="user">User</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="banner_for_login_page">Banner for Login Page</string>
    <string name="delete_item">delete item</string>
        <string-array name="sizes_array">
            <item>XS</item>
            <item>S</item>
            <item>M</item>
            <item>L</item>
            <item>XL</item>
        </string-array>

</resources>