<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_image"
        android:clipToOutline="true"
        android:contentDescription="@string/banner_for_login_page"
        android:scaleType="centerCrop"
        android:src="@drawable/login_banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"> <!-- Center the child views horizontally -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montsfont"
            android:gravity="center"
            android:text="@string/wb"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <!-- User Label -->
        <TextView
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montsfont"
            android:text="@string/user"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:background="@drawable/rounded_edittext_bg" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <TextView
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montsfont"
            android:text="@string/pass"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edittext_bg" /> <!-- Apply the custom background here -->
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_login"
            android:text="@string/common_signin_button_text"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" /> <!-- Add margin to create a gap -->

        <!-- "Don't have an account? Sign up" text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montsfont"
                android:text="@string/don_t_have_an_account"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registerNow"
                android:fontFamily="@font/montsfont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#800080" /> <!-- Set the text color to purple (#800080) -->
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
